Fix H2 letter spacing

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
 
 h2 {
     font-size: 24px;
-    letter-spacing: 0.12em;
+    letter-spacing: 0.02em;
 }
 
 a {
